--- a/manifest.json
+++ b/manifest.json
@@ -4,12 +4,12 @@
 	"description": "A HTML5 Calculator to use as PWA",
 	"icons": [
 		{
-			"src": "/icons/192.png",
+			"src": "/icons/v1-x192.png",
 			"type": "image/png",
 			"sizes": "192x192"
 		},
 		{
-			"src": "/icons/512.png",
+			"src": "/icons/v1-x512.png",
 			"type": "image/png",
 			"sizes": "512x512"
 		}
