--- a/manifest.json
+++ b/manifest.json
@@ -30,7 +30,7 @@
 	],
 	"start_url": "/",
 	"background_color": "#252525",
-	"display": "fullscreen",
+	"display": "standalone",
 	"scope": "/",
 	"theme_color": "#252525"
 }
